[UPDATE] Remove end debate button.